K8s/kubectl/gitops/istio-profile.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
