K8s/kubectl/gitops/web.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: robotshop
  name: web
  labels:
    service: web
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    service: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: robotshop
  name: web
  labels:
    app: web
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      serviceAccountName: robot-shop
      containers:
      - name: web
        image: 164382793440.dkr.ecr.us-west-2.amazonaws.com/robot-shop/web
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 50Mi
      restartPolicy: Always
