K8s/kubectl/gitops/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: public-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: robotshop
spec:
  hosts:
  - "*"
  gateways:
  - public-gateway
  http:
  - match:
    - uri:
        prefix: /catalogue
    - uri:
        prefix: /user
    - uri:
        prefix: /cart
    - uri:
        prefix: /shipping
    - uri:
        prefix: /payment
    - uri:
        prefix: /ratings
    route:
    - destination:
        host: web
        port:
          number: 80
